Update index - attivita -.html

--- a/index - attivita -.html
+++ b/index - attivita -.html
@@ -45,7 +45,7 @@ Escursioni guidate portano alla scoperta di colate laviche recenti, formazioni u
 <section class="descrizione-attività">
 
   <!-- Immagine (attività) -->
-  <img src="immagini/Etna-attività1.jpg" class="centrata">
+  <img src="immagini/Etna-attività1.png" class="centrata">
 
   <!-- Flora e fauna-->
   <h2>Birdwatching al Gran Paradiso 
@@ -54,7 +54,7 @@ Escursioni guidate portano alla scoperta di colate laviche recenti, formazioni u
   </p>
 
   <!-- Immagine birdwacthing -->
-  <img src="immagini/_birdwatching 1.jpg"  class="centrata">
+  <img src="immagini/_birdwatching 1.png"  class="centrata">
 
   <!-- trekking -->
   <h2>Trekkings sull'Alta Via delle Dolomiti </h2>
