Update index - attivita -.html

--- a/index - attivita -.html
+++ b/index - attivita -.html
@@ -74,7 +74,7 @@ panorami straordinari.    </p>
   
 
   <!-- Immagine pollino -->
-  <img src="immagini/_Pollino_attività 1.jpg"  class="centrata">
+  <img src="immagini/_Pollino_attività 1.png"  class="centrata">
   
   
 
