Update index - attivita -.html

--- a/index - attivita -.html
+++ b/index - attivita -.html
@@ -54,7 +54,7 @@ Escursioni guidate portano alla scoperta di colate laviche recenti, formazioni u
   </p>
 
   <!-- Immagine birdwacthing -->
-  <img src="immagini/_birdwatching 1.png"  class="centrata">
+  <img src="immagini/_birdwatching 1.jpg"  class="centrata">
 
   <!-- trekking -->
   <h2>Trekkings sull'Alta Via delle Dolomiti </h2>
