Update index - attivita -.html

--- a/index - attivita -.html
+++ b/index - attivita -.html
@@ -45,7 +45,7 @@ Escursioni guidate portano alla scoperta di colate laviche recenti, formazioni u
 <section class="descrizione-attività">
 
   <!-- Immagine (attività) -->
-  <img src="immagini/Etna-attività1.png" class="centrata">
+  <img src="immagini/Etna_crateri_silvestri 1.jpg" class="centrata">
 
   <!-- Flora e fauna-->
   <h2>Birdwatching al Gran Paradiso 
